--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import "~reset-css";
 @import "~swiper/css/swiper.min.css";
 @import "~aos/dist/aos.css";
-@import "~intl-tel-input/build/css/intlTelinput.min.css";
+@import "~intl-tel-input/build/css/intlTelinput.css";
 
 @import './helpers/variables';
 @import './helpers/mixins';
