--- a/src/styles/blocks/calc.scss
+++ b/src/styles/blocks/calc.scss
@@ -86,6 +86,7 @@
   }
 
   input[name="phone"],
+  input[name="email"],
   input[name="weight"],
   input[name="name"], 
   input[name="instagram"] {
