--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -684,6 +684,7 @@ display: none;
 
   &__input {
     margin-top: 0;
+    height: 38px;
   }
 
   &__inner {
@@ -721,6 +722,7 @@ display: none;
     flex-direction: column;
     align-items: center;
     line-height: 130%;
+    margin-top: 15px;
   }
 
   &__btn {
